--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             <div class="full-width">
                                 <div class="heading-wrapper">
                                     <h4 class="superscript">Invested</h4>
-                                    <svg id="svg-invested" class="svg-text svg-blue" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 225.1 104.283">
+                                    <svg id="svg-invested" class="svg-text svg-green" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 225.1 104.283">
                                         <path id="are-you-a1" d="M15.021,37.415c0.32-0.711,11.07-28.371,11.586-28.566c0.516-0.196,1.129-0.133,1.718,0.175c0.588,0.308,0.583,10.098,1.289,12.897s1.89,13.083,2.661,14.029"/>
                                         <path id="are-you-a2" d="M17.95,25.69c1.327-0.856,11.878-1.021,12.725-0.811"/>
                                         <path id="are-you-r" d="M37.458,38.585c0.751-1.287,4.189-28.949,5.185-30.21c0.996-1.262,5.252-0.458,6.256,0.637c1.004,1.095,2.617,4.729,1.841,6.261s-2.561,4.449-3.629,5.208c-1.068,0.759-4.346,2.51-5.237,2.74c-0.891,0.23,0.09,0.33,0.531,0.87c0.44,0.541,12.475,15.029,13.283,15.607"/>
@@ -87,7 +87,7 @@
                                     </svg>
                                 </div>
                             </div>
-                            <ul class="medium blue-hover">
+                            <ul class="medium green-hover">
                                 <li><a href="">- Still at school? Your journey as an entrepreneur is here</a></li>
                                 <li><a href="">- Expand your skillset as a science innovator</a></li>
                                 <li><a href="">- Be in the room alonside driven startups</a></li>
@@ -111,7 +111,7 @@
                                     <h4 class="right-align">Connecting</h4>
                                 </div>
                             </div>
-                            <ul class="medium green-hover right-align">
+                            <ul class="medium blue-hover right-align">
                                 <li><a href="">- Meet, mix, and connect with the startup community</a></li>
                                 <li><a href="">- Share your startup experiences</a></li>
                                 <li><a href="">- Learn best practice startup methodologies</a></li>
