More change yay

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="col s8 offset-s4">
                             <div class="full-width right-align">
                                 <div class="heading-wrapper">
-                                    <h4 class="right-align">Connecting</h4>
+                                    <h4 class="subtitle">Connecting</h4>
                                 </div>
                             </div>
                             <ul class="medium blue-hover right-align">
@@ -120,6 +120,9 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+                <div id="rocket-2" class="image-wrapper">
+                    <img class="responsive" src="img/rocket.png">
                 </div>
             </section>
 
