--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                                 </div>
                             </div>
                             <ul class="big right-align red-hover">
-                                <li><a href="">- Go full-time on your business</a></li>
-                                <li><a href="">- Equip your team for industry disruption</a></li>
-                                <li><a href="">- Learn to think like a startup</a></li>
-                                <li><a href="">- Amplify your company 10x</a></li>
-                                <li><a href="">- Take your company global</a></li>
+                                <li><a href="">Equip your team for industry disruption</a></li>
+                                <li><a href="">Go full-time on your business</a></li>
+                                <li><a href="">Learn to think like a startup</a></li>
+                                <li><a href="">Amplify your company 10x</a></li>
+                                <li><a href="">Take your company global</a></li>
                             </ul>
                         </div>
                     </div>
@@ -88,11 +88,11 @@
                                 </div>
                             </div>
                             <ul class="medium green-hover">
-                                <li><a href="">- Still at school? Your journey as an entrepreneur is here</a></li>
-                                <li><a href="">- Expand your skillset as a science innovator</a></li>
-                                <li><a href="">- Be in the room alonside driven startups</a></li>
-                                <li><a href="">- Amplify your early idea into a growth venture</a></li>
-                                <li><a href="">- Get involved in the next generation of smart talent</a></li>
+                                <li><a href="">Still at school? Your journey as an entrepreneur is here</a></li>
+                                <li><a href="">Get involved in the next generation of smart talent</a></li>
+                                <li><a href="">Amplify your early idea into a growth venture</a></li>
+                                <li><a href="">Expand your skillset as a science innovator</a></li>
+                                <li><a href="">Be in the room alonside driven startups</a></li>
                             </ul>
                         </div>
                     </div>
@@ -112,11 +112,11 @@
                                 </div>
                             </div>
                             <ul class="medium blue-hover right-align">
-                                <li><a href="">- Meet, mix, and connect with the startup community</a></li>
-                                <li><a href="">- Share your startup experiences</a></li>
-                                <li><a href="">- Learn best practice startup methodologies</a></li>
-                                <li><a href="">- Power up to an Exponential Organisation</a></li>
-                                <li><a href="">- Talk to us about the help you need</a></li>
+                                <li><a href="">Meet, mix, and connect with the startup community</a></li>
+                                <li><a href="">Learn best practice startup methodologies</a></li>
+                                <li><a href="">Power up to an Exponential Organisation</a></li>
+                                <li><a href="">Talk to us about the help you need</a></li>
+                                <li><a href="">Share your startup experiences</a></li>
                             </ul>
                         </div>
                     </div>
