--- a/index.html
+++ b/index.html
@@ -98,17 +98,30 @@
                     </div>
                 </div>
                 <div id="wolf-2" class="image-wrapper">
-                    <img class="responsive" src="img/wolf.png">
+                    <img class="responsive" src="img/wolf-2.png">
                 </div>
             </section>
 
-            <section id="connected">
+            <section id="connecting">
                 <div class="container valign-wrapper full-height">
                     <div class="row valign">
                         <div class="col s8 offset-s4">
                             <div class="full-width right-align">
                                 <div class="heading-wrapper">
                                     <h4 class="subtitle">Connecting</h4>
+                                    <svg id="svg-connecting" class="svg-text svg-blue" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 531 100">
+                                        <path id="community-c" d="M212.621,15.724c-3.279,0.656-10.494,3.936-13.446,9.511c-2.951,5.575-5.903,15.085-5.903,18.693s-1.64,14.757,2.295,21.316c3.936,6.559,4.264,10.822,10.495,16.725c6.231,5.903,3.607,2.296,3.607,2.296"/>
+                                        <path id="community-o" d="M229.018,39.664c1.968-2.624,4.591-7.543,7.543-5.575c2.951,1.968,8.198,7.542,7.542,12.134s-3.551,12.79-7.515,14.758c-3.963,1.968-5.603,5.903-11.834,1.64s-7.215-9.731-6.559-12.08c0.656-2.35,2.624-10.548,4.263-12.844c1.64-2.296,5.247-10.417,7.215-4.061"/>
+                                        <path id="community-m1" d="M251.974,74.426c5.903-12.79,10.822-45.913,11.806-48.208c0.984-2.295,2.624,0,2.624,0s-0.656,22.301,2.952,30.827s2.295,7.422,6.559,7.482c4.263,0.061,6.887-13.329,7.542-16.637s5.247-21.744,5.903-22.692c0.656-0.948,1.967,0,1.967,0s-3.279,33.159,2.296,46.932"/>
+                                        <path id="community-m2" d="M303.79,74.426c5.575-10.167,10.167-46.896,10.822-47.88c0.656-0.984,1.64-1.968,2.624,0c0.984,1.968-1.312,21.973,3.936,30.827s2.295,7.094,5.247,7.154c2.952,0.061,3.936-4.203,4.919-7.154c0.984-2.952,8.854-30.102,8.854-32.596s1.64,0.458,1.64,1.769c0,1.312-2.295,34.762,2.624,44.601"/>
+                                        <path id="community-u" d="M357.901,29.169c-0.656,8.854-1.64,33.779,0,40.009c1.64,6.231,3.607,5.575,5.903,5.248c2.296-0.328,6.559-6.023,8.199-9.899c1.64-3.875,7.215-26.831,9.183-30.438s1.312-7.118,1.64-10.282"/>
+                                        <path id="community-n" d="M395.942,78.689c-0.983-8.527,1.312-51.418,2.296-53.913s0-4.134,0.984-4.134s20.004,46.24,21.316,46.896c1.312,0.656,0.984-2.416,1.639-3.012c0.656-0.596,1.969-36.342,3.607-45.852"/>
+                                        <path id="community-i" d="M441.855,26.218c-0.656-9.182-0.656,16.805-1.641,22.996c-0.983,6.191-1.639,18.981,0,23.245"/>
+                                        <path id="community-t1" d="M447.43,20.643c7.871-1.968,39.682-2.952,45.585-6.559"/>
+                                        <path id="community-t2" d="M468.747,18.19c0.327,7.7-2.624,46.398,0,52.629"/>
+                                        <path id="community-y1" d="M489.079,20.643c3.607,5.575,9.839,24.268,11.807,25.908"/>
+                                        <path id="community-y2" d="M512.691,18.675c-4.264,10.822-20.66,52.144-20.988,53.783s-1.64,2.624,0,6.231"/>
+                                    </svg>
                                 </div>
                             </div>
                             <ul class="medium blue-hover right-align">
@@ -127,7 +140,7 @@
             </section>
 
             <section id="fade">
-                <div class="container full-height"></div>
+                <div class="container half-height"></div>
             </section>
 
             <footer class="dark-footer">
