Added typing effect

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="container valign-wrapper full-height">
                     <div class="row valign">
                         <div class="col s12 center-align">
-                            <h1>Creative HQ is a cool team of nice people</h1>
+                            <h1 class="main-heading">Build <span id="typed"></span></h1>
                         </div>
                     </div>
                 </div>
@@ -248,10 +248,52 @@
                         </svg>
                     </div>
                 </div>
-                <div class="container half-height"></div>
+                <div class="container half-height">
+                    <div class="row">
+                        <div class="col s3">
+                            <h6>About Us</h6>
+                            <ul>
+                                <li><a href="http://creativehq.co.nz/">The Creative HQ Mission</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/ventures-alumni/">Ventures & Alumni</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Partners & Sponsors</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/our-team/">Our Team</a></li>
+                            </ul>
+                        </div>
+                        <div class="col s3">
+                            <h6>Innovation Services</h6>
+                            <ul>
+                                <li><a href="http://creativehq.co.nz/incubation/global-growth-programme/">Global Growth Programme</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Corporate Acceleration Programmes</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/exo-workshop/">ExO Workshops</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/ideation/">Lean Startup & Agile Coaching</a></li>
+                                <li><a href="http://creativehq.co.nz/focus-framework/">Focus Framework</a></li>
+                            </ul>
+                        </div>
+                        <div class="col s3">
+                            <h6>Current Programmes</h6>
+                            <ul>
+                                <li><a href="http://www.ventureup.co.nz/">Venture Up</a></li>
+                                <li><a href="https://www.kiwinet.org.nz/GetFunded">Get Funded</a></li>
+                                <li><a href="http://www.lightninglab.co.nz/">Lightning Lab</a></li>
+                                <li><a href="http://www.r9accelerator.co.nz/">R9 Accelerator with MBIE</a></li>
+                                <li><a href="https://nzfintech.kiwi/">Kiwibank Fintech Accelerator</a></li>
+                                <li><a href="http://1-a.co.nz/">1st Assembly</a></li>
+                            </ul>
+                        </div>
+                        <div class="col s3">
+                            <h6>Community</h6>
+                            <ul>
+                                <li><a href="http://creativehq.co.nz/about-us/news/">Latest News</a></li>
+                                <li><a href="http://www.meetup.com/StartupGarage/">Meetups & Events</a></li>
+                                <li><a href="http://creativehq.co.nz/startup-community/">Startup Resources</a></li>
+                                <li><a href="http://creativehq.co.nz/startup-community/sponsorships/">Mentorship & Investment</a></li>
+                                <li><a href="http://creativehq.co.nz/media-kit/">Media</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
                 <div class="footer-copyright">
-                    <a class="left">&copy; Creative HQ 2016</a>
-                    <a class="right">Privacy Policy</a>
+                    <a>&copy; Creative HQ 2016</a>
                 </div>
             </footer>
 
@@ -263,6 +305,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
         <script src="js/scrollmagic-GSAP.js"></script>
+        <script src="js/typed.js"></script>
         <script src="js/script.js"></script>
     </body>
 </html>
