--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     <div class="row">
                         <div class="col s3">
                             <h6>About Us</h6>
-                            <ul>
+                            <ul class="red-hover">
                                 <li><a href="http://creativehq.co.nz/">The Creative HQ Mission</a></li>
                                 <li><a href="http://creativehq.co.nz/about-us/ventures-alumni/">Ventures & Alumni</a></li>
                                 <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Partners & Sponsors</a></li>
@@ -261,7 +261,7 @@
                         </div>
                         <div class="col s3">
                             <h6>Innovation Services</h6>
-                            <ul>
+                            <ul class="green-hover">
                                 <li><a href="http://creativehq.co.nz/incubation/global-growth-programme/">Global Growth Programme</a></li>
                                 <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Corporate Acceleration Programmes</a></li>
                                 <li><a href="http://creativehq.co.nz/innovation-services/exo-workshop/">ExO Workshops</a></li>
@@ -271,7 +271,7 @@
                         </div>
                         <div class="col s3">
                             <h6>Current Programmes</h6>
-                            <ul>
+                            <ul class="blue-hover">
                                 <li><a href="http://www.ventureup.co.nz/">Venture Up</a></li>
                                 <li><a href="https://www.kiwinet.org.nz/GetFunded">Get Funded</a></li>
                                 <li><a href="http://www.lightninglab.co.nz/">Lightning Lab</a></li>
@@ -282,7 +282,7 @@
                         </div>
                         <div class="col s3">
                             <h6>Community</h6>
-                            <ul>
+                            <ul class="red-hover">
                                 <li><a href="http://creativehq.co.nz/about-us/news/">Latest News</a></li>
                                 <li><a href="http://www.meetup.com/StartupGarage/">Meetups & Events</a></li>
                                 <li><a href="http://creativehq.co.nz/startup-community/">Startup Resources</a></li>
