--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                         </svg>
                         <svg id="chq-neon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 723 148">
                             <defs>
-                                <filter id="drop-shadow">
-                                    <feGaussianBlur stdDeviation="2"/>
+                                <filter x="-50%" y="-50%" width="1000%" height="1000%" id="drop-shadow">
+                                    <feGaussianBlur stdDeviation="4"/>
                                 </filter>
                             </defs>
                             <path class="stroke white" d="M531.505,122.605 531.505,25.394" filter="url(#drop-shadow)"/>
