--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="description" content="Just a test"/>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/font.css">
         <link rel="stylesheet" href="css/stylesheet.css">
     </head>
@@ -14,10 +16,11 @@
         <main>
 
             <section id="hero">
-                <div class="container valign-wrapper full-height">
+                <div class="container full-width valign-wrapper full-height">
                     <div class="row valign">
-                        <div class="col s12 center-align">
-                            <h1 class="main-heading">Build <span id="typed"></span></h1>
+                        <div class="col s12 center-align hero-wrapper">
+                            <h1 class="main-heading"><span id="typed"></span></h1>
+                            <i class="material-icons">keyboard_arrow_down</i>
                         </div>
                     </div>
                 </div>
@@ -53,11 +56,11 @@
                                 </div>
                             </div>
                             <ul class="big right-align red-hover">
-                                <li><a href="">Equip your team for industry disruption</a></li>
-                                <li><a href="">Go full-time on your business</a></li>
-                                <li><a href="">Learn to think like a startup</a></li>
-                                <li><a href="">Amplify your company 10x</a></li>
-                                <li><a href="">Take your company global</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Equip your team for industry disruption</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Go full-time on your business</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Learn to think like a startup</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Amplify your company 10x</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Take your company global</a></li>
                             </ul>
                         </div>
                     </div>
@@ -88,11 +91,11 @@
                                 </div>
                             </div>
                             <ul class="medium green-hover">
-                                <li><a href="">Still at school? Your journey as an entrepreneur is here</a></li>
-                                <li><a href="">Get involved in the next generation of smart talent</a></li>
-                                <li><a href="">Amplify your early idea into a growth venture</a></li>
-                                <li><a href="">Expand your skillset as a science innovator</a></li>
-                                <li><a href="">Be in the room alonside driven startups</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Still at school? Your journey as an entrepreneur is here</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Get involved in the next generation of smart talent</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Amplify your early idea into a growth venture</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Expand your skillset as a science innovator</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Be in the room alonside driven startups</a></li>
                             </ul>
                         </div>
                     </div>
@@ -125,11 +128,11 @@
                                 </div>
                             </div>
                             <ul class="medium blue-hover right-align">
-                                <li><a href="">Meet, mix, and connect with the startup community</a></li>
-                                <li><a href="">Learn best practice startup methodologies</a></li>
-                                <li><a href="">Power up to an Exponential Organisation</a></li>
-                                <li><a href="">Talk to us about the help you need</a></li>
-                                <li><a href="">Share your startup experiences</a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Meet, mix, and connect with the startup community</a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Learn best practice startup methodologies</a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Power up to an Exponential Organisation</a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Talk to us about the help you need</a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Share your startup experiences</a></li>
                             </ul>
                         </div>
                     </div>
@@ -139,8 +142,8 @@
                 </div>
             </section>
 
-            <section id="fade">
-                <div class="container half-height"></div>
+            <section id="graffiti">
+                <img src="img/graffiti.png">
             </section>
 
             <footer class="dark-footer">
@@ -254,8 +257,8 @@
                             <h6>About Us</h6>
                             <ul class="red-hover">
                                 <li><a href="http://creativehq.co.nz/">The Creative HQ Mission</a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/ventures-alumni/">Ventures & Alumni</a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Partners & Sponsors</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/ventures-alumni/">Ventures &amp; Alumni</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Partners &amp; Sponsors</a></li>
                                 <li><a href="http://creativehq.co.nz/about-us/our-team/">Our Team</a></li>
                             </ul>
                         </div>
@@ -265,7 +268,7 @@
                                 <li><a href="http://creativehq.co.nz/incubation/global-growth-programme/">Global Growth Programme</a></li>
                                 <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Corporate Acceleration Programmes</a></li>
                                 <li><a href="http://creativehq.co.nz/innovation-services/exo-workshop/">ExO Workshops</a></li>
-                                <li><a href="http://creativehq.co.nz/innovation-services/ideation/">Lean Startup & Agile Coaching</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/ideation/">Lean Startup &amp; Agile Coaching</a></li>
                                 <li><a href="http://creativehq.co.nz/focus-framework/">Focus Framework</a></li>
                             </ul>
                         </div>
@@ -284,11 +287,24 @@
                             <h6>Community</h6>
                             <ul class="red-hover">
                                 <li><a href="http://creativehq.co.nz/about-us/news/">Latest News</a></li>
-                                <li><a href="http://www.meetup.com/StartupGarage/">Meetups & Events</a></li>
+                                <li><a href="http://www.meetup.com/StartupGarage/">Meetups &amp; Events</a></li>
                                 <li><a href="http://creativehq.co.nz/startup-community/">Startup Resources</a></li>
-                                <li><a href="http://creativehq.co.nz/startup-community/sponsorships/">Mentorship & Investment</a></li>
+                                <li><a href="http://creativehq.co.nz/startup-community/sponsorships/">Mentorship &amp; Investment</a></li>
                                 <li><a href="http://creativehq.co.nz/media-kit/">Media</a></li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="row padded">
+                        <div class="col s12 center-align">
+                            <a class="btn btn-large">Chat with us</a>
+                        </div>
+                    </div>
+                    <div class="row padded">
+                        <div class="col s12 center-align">
+                            <a class="social red-hover"><i class="fa fa-2x fa-facebook-square"></i></a>
+                            <a class="social green-hover"><i class="fa fa-2x fa-twitter-square"></i></a>
+                            <a class="social blue-hover"><i class="fa fa-2x fa-linkedin-square"></i></a>
+                            <a class="social red-hover"><i class="fa fa-2x fa-envelope-square"></i></a>
                         </div>
                     </div>
                 </div>
