--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </section>
 
             <footer class="dark-footer">
-                <div class="container valign-wrapper half-height">
+                <div class="container valign-wrapper">
                     <div class="svg-wrapper valign">
                         <svg id="chq" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 723 148">
                             <!--C-->
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="container half-height">
-                    <div class="row">
+                    <div class="row padded-lots">
                         <div class="col s3">
                             <h6>About Us</h6>
                             <ul class="red-hover">
