--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                                 </div>
                             </div>
                             <ul class="big right-align red-hover">
-                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Equip your team for industry disruption</a></li>
-                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Go full-time on your business</a></li>
-                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Learn to think like a startup</a></li>
-                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Amplify your company 10x</a></li>
-                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Take your company global</a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Equip your team for industry disruption<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Go full-time on your business<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Learn to think like a startup<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Amplify your company 10x<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://creativehq.co.nz/innovation-services/corporate-acceleration/">Take your company global<i class="fa fa-angle-right pad-right"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -91,11 +91,11 @@
                                 </div>
                             </div>
                             <ul class="medium green-hover">
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Still at school? Your journey as an entrepreneur is here</a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Get involved in the next generation of smart talent</a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Amplify your early idea into a growth venture</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Still at school? Your journey as an entrepreneur is here<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Get involved in the next generation of smart talent<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Amplify your early idea into a growth venture<i class="fa fa-angle-right pad-right"></i></a></li>
                                 <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Expand your skillset as a science innovator</a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Be in the room alonside driven startups</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Be in the room alonside driven startups<i class="fa fa-angle-right pad-right"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -128,11 +128,11 @@
                                 </div>
                             </div>
                             <ul class="medium blue-hover right-align">
-                                <li><a href="http://www.meetup.com/startupgarage/">Meet, mix, and connect with the startup community</a></li>
-                                <li><a href="http://www.meetup.com/startupgarage/">Learn best practice startup methodologies</a></li>
-                                <li><a href="http://www.meetup.com/startupgarage/">Power up to an Exponential Organisation</a></li>
-                                <li><a href="http://www.meetup.com/startupgarage/">Talk to us about the help you need</a></li>
-                                <li><a href="http://www.meetup.com/startupgarage/">Share your startup experiences</a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Meet, mix, and connect with the startup community<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Learn best practice startup methodologies<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Power up to an Exponential Organisation<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Talk to us about the help you need<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://www.meetup.com/startupgarage/">Share your startup experiences<i class="fa fa-angle-right pad-right"></i></a></li>
                             </ul>
                         </div>
                     </div>
