--- a/index.html
+++ b/index.html
@@ -296,15 +296,15 @@
                     </div>
                     <div class="row padded">
                         <div class="col s12 center-align">
-                            <a class="btn btn-large">Chat with us</a>
+                            <a class="btn btn-large">Start a conversation <i class="fa fa-coffee pad-right"></i></a>
                         </div>
                     </div>
                     <div class="row padded">
                         <div class="col s12 center-align">
-                            <a class="social red-hover"><i class="fa fa-2x fa-facebook-square"></i></a>
-                            <a class="social green-hover"><i class="fa fa-2x fa-twitter-square"></i></a>
-                            <a class="social blue-hover"><i class="fa fa-2x fa-linkedin-square"></i></a>
-                            <a class="social red-hover"><i class="fa fa-2x fa-envelope-square"></i></a>
+                            <a class="social red-hover"><i class="fa fa-3x fa-facebook-square"></i></a>
+                            <a class="social green-hover"><i class="fa fa-3x fa-twitter-square"></i></a>
+                            <a class="social blue-hover"><i class="fa fa-3x fa-linkedin-square"></i></a>
+                            <a class="social red-hover"><i class="fa fa-3x fa-envelope-square"></i></a>
                         </div>
                     </div>
                 </div>
