Added bouncing to arrow

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                     <div class="row valign">
                         <div class="col s12 center-align hero-wrapper">
                             <h1 class="main-heading"><span id="typed"></span></h1>
-                            <a id="down-arrow"><i class="material-icons">keyboard_arrow_down</i></a>
+                            <a id="down-arrow" class="hidden">
+                                <i class="material-icons">keyboard_arrow_down</i>
+                                <p>Scroll down</p>
+                            </a>
                         </div>
                     </div>
                 </div>
