Added some text to the footer

--- a/index.html
+++ b/index.html
@@ -254,6 +254,13 @@
                         </svg>
                     </div>
                 </div>
+                <div class="container">
+                    <div class="row padded-lots">
+                        <div class="col s12 center-align">
+                            <p class="main-description">We work with startups, corporates, and government agencies<br>to enable startup thinking and drive entrepreneurial passion.</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="container half-height">
                     <div class="row padded-lots">
                         <div class="col s3">
