--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Still at school? Your journey as an entrepreneur is here<i class="fa fa-angle-right pad-right"></i></a></li>
                                 <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Get involved in the next generation of smart talent<i class="fa fa-angle-right pad-right"></i></a></li>
                                 <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Amplify your early idea into a growth venture<i class="fa fa-angle-right pad-right"></i></a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Expand your skillset as a science innovator</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Expand your skillset as a science innovator<i class="fa fa-angle-right pad-right"></i></a></li>
                                 <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Be in the room alonside driven startups<i class="fa fa-angle-right pad-right"></i></a></li>
                             </ul>
                         </div>
