Tweaks to the padding

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                                 </div>
                             </div>
                             <ul class="medium green-hover">
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Still at school? Your journey as an entrepreneur is here<i class="fa fa-angle-right pad-right"></i></a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Get involved in the next generation of smart talent<i class="fa fa-angle-right pad-right"></i></a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Amplify your early idea into a growth venture<i class="fa fa-angle-right pad-right"></i></a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Expand your skillset as a science innovator<i class="fa fa-angle-right pad-right"></i></a></li>
-                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/">Be in the room alonside driven startups<i class="fa fa-angle-right pad-right"></i></a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/"><i class="fa fa-angle-right pad-left"></i>Still at school? Your journey as an entrepreneur is here</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/"><i class="fa fa-angle-right pad-left"></i>Get involved in the next generation of smart talent</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/"><i class="fa fa-angle-right pad-left"></i>Amplify your early idea into a growth venture</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/"><i class="fa fa-angle-right pad-left"></i>Expand your skillset as a science innovator</a></li>
+                                <li><a href="http://creativehq.co.nz/about-us/partners-sponsors/"><i class="fa fa-angle-right pad-left"></i>Be in the room alongside driven startups</a></li>
                             </ul>
                         </div>
                     </div>
