--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
     </head>
     <body>
         <main>
-
             <section id="hero">
                 <div class="container full-width valign-wrapper full-height">
                     <div class="row valign">
                         <div class="col s12 center-align hero-wrapper">
                             <h1 class="main-heading"><span id="typed"></span></h1>
-                            <a id="down-arrow" class="hidden">
+                            <a href="#bold" id="down-arrow" class="hidden anchor-link">
                                 <i class="material-icons">keyboard_arrow_down</i>
-                                <p>Scroll down</p>
+                                <p>Find out how</p>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div id="lion" class="image-wrapper">
+                <div id="lion" class="image-wrapper anchor-link" data-href="#bold">
                     <img class="responsive" src="img/lion.png">
                 </div>
-                <div id="wolf" class="image-wrapper">
+                <div id="wolf" class="image-wrapper anchor-link" data-href="#invested">
                     <img class="responsive" src="img/wolf.png">
                 </div>
-                <div id="rocket" class="image-wrapper">
+                <div id="rocket" class="image-wrapper anchor-link" data-href="#connecting">
                     <img class="responsive" src="img/rocket.png">
                 </div>
             </section>
