Changes to the hero

--- a/index.html
+++ b/index.html
@@ -15,27 +15,19 @@
     <body>
         <main>
             <section id="hero">
-                <div class="container full-width valign-wrapper full-height">
-                    <div class="row valign">
-                        <div class="col s12 center-align hero-wrapper">
-                            <h1 class="main-heading"><span id="typed"></span></h1>
-                            <a href="#bold" id="down-arrow" class="hidden anchor-link">
-                                <i class="material-icons">keyboard_arrow_down</i>
-                                <p>Find out how</p>
-                            </a>
+                <div class="container full-width valign-wrapper three-quarter-height">
+                    <div class="row">
+                        <div class="col s12 right-align hero-wrapper">
+                            <h1 class="main-heading">Creative HQ enables startup thinking<br>and drives entrepreneurial passion<br>for <span id="typed"></span></h1>
                         </div>
                     </div>
                 </div>
-                <div id="lion" class="image-wrapper anchor-link" data-href="#bold">
-                    <img class="responsive" src="img/lion.png">
-                </div>
-                <div id="wolf" class="image-wrapper anchor-link" data-href="#invested">
-                    <img class="responsive" src="img/wolf.png">
-                </div>
-                <div id="rocket" class="image-wrapper anchor-link" data-href="#connecting">
-                    <img class="responsive" src="img/rocket.png">
-                </div>
             </section>
+            <!--
+            <a href="#bold" id="down-arrow" class="hidden anchor-link">
+                                <i class="material-icons">keyboard_arrow_down</i>
+                                <p>Find out how</p>
+                            </a>-->
 
             <section id="bold">
                 <div class="container valign-wrapper full-height">
@@ -66,6 +58,9 @@
                             </ul>
                         </div>
                     </div>
+                </div>
+                <div id="lion" class="image-wrapper anchor-link" data-href="#bold">
+                    <img class="responsive" src="img/lion.png">
                 </div>
             </section>
 
